# SparkleShare

./: Makefile.am  configure.ac
SparkleLib/Gitbin/: Makefile.am  SparkleFetcherGitbin.cs  SparkleGitbin.cs  SparkleRepoGitbin.cs
